test/ingress/ingress-clusterissuer.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    # add an annotation indicating the issuer to use.
    certmanager.k8s.io/cluster-issuer: clusterissuer-ca
  name: ingress-clusterissuer
  namespace: cert-manager-test
spec:
  rules:
  - host: myingress.com
    http:
      paths:
      - backend:
          serviceName: myservice
          servicePort: 80
        path: /
  tls: # < placing a host in the TLS config will indicate a cert should be created
  - hosts:
    - myingress.com
    secretName: ingress-clusterissuer-secret # < cert-manager will store the created certificate in this secret.
